--- a/public/index.html
+++ b/public/index.html
@@ -41,14 +41,16 @@
     -->
     <script>
       // Register service worker for offline functionality
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('/sw.js')
-            .then(function(registration) {
-              console.log('SW registered: ', registration);
-            }, function(registrationError) {
-              console.log('SW registration failed: ', registrationError);
-            });
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+          navigator.serviceWorker.register("/sw.js").then(
+            function (registration) {
+              console.log("SW registered: ", registration);
+            },
+            function (registrationError) {
+              console.log("SW registration failed: ", registrationError);
+            },
+          );
         });
       }
     </script>
